# esp32_blackmagic

./: README.md  platformio.ini  sdkconfig.c3mini  sdkconfig.esp32-c3-devkitm-1  sdkconfig.m5stack-atom
main/: CMakeLists.txt  Kconfig.projbuild  gdb_if.c  gdb_if_serial.c  gdb_if_wrapper.c  gdb_main.c  gdb_main.h  log_capture.c  log_capture.h  main.c  platform.c  platform.h  platform_commands.c  uart_passthrough.c  web_server.c
